Added stats output

--- a/examples/example_full.config
+++ b/examples/example_full.config
@@ -1,4 +1,9 @@
 {
+    "general": {
+        "temperature": 20.0,
+        "copper_resistivity": 1.68e-5,
+        "copper_temperature_coefficient": 4.04e-3
+    },
     "board": {
         "board_shape": "square",
         "board_diameter": 42,
@@ -10,6 +15,8 @@
         "board_outer_margin": 3,
         "board_inner_margin": 1.0,
         "rotation": -15,
+        "outer_layers_copper_thickness": 0.0348,
+        "inner_layers_copper_thickness": 0.0174,
         "mountpoints": {
             "n_mountpoints": 4,
             "mountpoints_position_radius": 23,
@@ -44,7 +51,8 @@
         "via_diameter": 0.45,
         "via_drill_diameter": 0.3,
         "outer_vias_offset": 0.0,
-        "inner_vias_offset": 0.4
+        "inner_vias_offset": 0.4,
+        "via_resistance": 0.0
     },
     "terminals": {
         "terminal_type": "through_hole",
