Added 'mountpoints' config param + misc small bugfixes

--- a/examples/example_full.config
+++ b/examples/example_full.config
@@ -18,6 +18,7 @@
         "outer_layers_copper_thickness": 0.0348,
         "inner_layers_copper_thickness": 0.0174,
         "mountpoints": {
+            "mountpoints": true,
             "n_mountpoints": 4,
             "mountpoints_position_radius": 23,
             "mountpoints_diameter": 3,
