Improved config creation

--- a/examples/example_full.config
+++ b/examples/example_full.config
@@ -18,7 +18,7 @@
         "outer_layers_copper_thickness": 0.0348,
         "inner_layers_copper_thickness": 0.0174,
         "mountpoints": {
-            "mountpoints": true,
+            "generate_mountpoints": true,
             "n_mountpoints": 4,
             "mountpoints_position_radius": 23,
             "mountpoints_diameter": 3,
@@ -30,11 +30,11 @@
         "trace_spacing": 0.1,
         "n_phases": 3,
         "n_slots_per_phase": 4,
-        "coil_angle": null,
+        "coil_angle": "auto",
         "four_layers_inner_vias": false,
-        "max_turns_per_layer": null,
-        "coil_names_font_size": null,
-        "coil_names_offset": null,
+        "turns_per_layer": "auto",
+        "coil_names_font_size": "auto",
+        "coil_names_offset": "auto",
         "series_link": {
             "link_series_coils": true,
             "series_link_inner_trace_width": 0.3,
@@ -62,8 +62,8 @@
         "terminal_offset": 0.0
     },
     "magnets": {
-        "magnets_diameter": null,
-        "magnets_position_radius": null
+        "magnets_diameter": "auto",
+        "magnets_position_radius": "auto"
     },
     "display": {
         "draw_vias": true,
