Renamed "slots per phase" to "coils per phase"

--- a/examples/example_minimal.config
+++ b/examples/example_minimal.config
@@ -7,7 +7,7 @@
     },
     "coils": {
         "n_phases": 3,
-        "n_slots_per_phase": 2,
+        "n_coils_per_phase": 2,
         "trace_width": 0.1,
         "trace_spacing": 0.1
     },
