--- a/examples/example_full.config
+++ b/examples/example_full.config
@@ -29,7 +29,7 @@
         "trace_width": 0.1,
         "trace_spacing": 0.1,
         "n_phases": 3,
-        "n_slots_per_phase": 4,
+        "n_coils_per_phase": 4,
         "coil_angle": "auto",
         "four_layers_inner_vias": false,
         "turns_per_layer": "auto",
