Added Path.offset() and config to export traces as polygon (EXPERIMENTAL)

--- a/examples/example_full.config
+++ b/examples/example_full.config
@@ -31,8 +31,9 @@
         "n_phases": 3,
         "n_coils_per_phase": 4,
         "coil_angle": "auto",
-        "four_layers_inner_vias": false,
         "turns_per_layer": "auto",
+        "radial_traces": "parallel",
+        "traces_geometry": "lines",
         "coil_names_font_size": "auto",
         "coil_names_offset": "auto",
         "series_link": {
@@ -53,13 +54,16 @@
         "via_drill_diameter": 0.3,
         "outer_vias_offset": 0.0,
         "inner_vias_offset": 0.4,
+        "inside_vias_offset": 0.0,
+        "four_layers_inner_vias": false,
         "via_resistance": 0.0
     },
     "terminals": {
         "terminal_type": "through_hole",
         "terminal_diameter": 1.5,
         "terminal_hole_diameter": 0.8,
-        "terminal_offset": 0.0
+        "terminal_offset": 0.0,
+        "generate_com_terminal": true
     },
     "magnets": {
         "magnets_diameter": "auto",
