Added Kicad polygon export

--- a/examples/example_full.config
+++ b/examples/example_full.config
@@ -81,5 +81,9 @@
     "svg": {
         "svg_profile": "tiny",
         "svg_scale": 100
+    },
+    "kicad": {
+        "arcs_discretization_length": 0.1,
+        "arcs_discretization_angle": 2
     }
 }
