--- a/examples/example_full.config
+++ b/examples/example_full.config
@@ -66,7 +66,7 @@
         "generate_com_terminal": true
     },
     "magnets": {
-        "magnets_diameter": "auto",
+        "magnets_width": "auto",
         "magnets_position_radius": "auto"
     },
     "display": {
